Revert "Modify SwiftLift configuration"
This reverts commit d6b69529ac0221639c1d5a4bc53946d946480d60.

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -63,6 +63,7 @@ opt_in_rules:
   - sorted_imports
   - static_operator
   - strict_fileprivate
+  - strong_iboutlet
   - switch_case_on_newline
   - toggle_bool
   - trailing_closure
@@ -82,7 +83,7 @@ private_outlet:
 
 file_name:
   excluded: Constants.swift
-  suffix_pattern: (\+\w+|Extensions?)
+  suffix_pattern: Extensions?
 
 file_header:
   required_pattern: |
