--- a/Vienna/Resources/DemoFeeds.plist
+++ b/Vienna/Resources/DemoFeeds.plist
@@ -2,10 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Apple News</key>
+	<key>Apple Hot News</key>
 	<dict>
 		<key>URL</key>
-		<string>https://www.apple.com/newsroom/rss-feed.rss</string>
+		<string>http://images.apple.com/main/rss/hotnews/hotnews.rss</string>
 	</dict>
 	<key>BBC World News</key>
 	<dict>
