Update Sparkle to version 2.0 beta 4
The XPC services are now bundled in the Sparkle framework.

Since Vienna is not using sandboxing, the SUEnableInstallerLauncherService key is set to false.

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -140,6 +140,8 @@
 	<string>Vienna.sdef</string>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
+	<key>SUEnableInstallerLauncherService</key>
+	<false/>
 	<key>SUPublicDSAKeyFile</key>
 	<string>SparkleDSAPublicKey.pem</string>
 	<key>SUPublicEDKey</key>
