Optimise plug-in images and remove all plug-ins from default list
TIFF images can contain multiple sizes in one file. The high-dpi variants of the images are merged with the other files.

--- a/Vienna/SharedSupport/Plugins/ShareWithBuffer.viennaplugin/info.plist
+++ b/Vienna/SharedSupport/Plugins/ShareWithBuffer.viennaplugin/info.plist
@@ -5,7 +5,7 @@
 	<key>Name</key>
 	<string>ShareWithBuffer</string>
 	<key>Default</key>
-	<true/>
+	<false/>
 	<key>Type</key>
 	<string>Link</string>
 	<key>URL</key>
