--- a/Vienna/SharedSupport/Plugins/ShareWithFacebook.viennaplugin/info.plist
+++ b/Vienna/SharedSupport/Plugins/ShareWithFacebook.viennaplugin/info.plist
@@ -5,7 +5,7 @@
 	<key>Name</key>
 	<string>ShareWithFacebook</string>
 	<key>Default</key>
-	<true/>
+	<false/>
 	<key>Type</key>
 	<string>Link</string>
 	<key>URL</key>
@@ -16,8 +16,6 @@
 	<string>Share the current article on Facebook</string>
 	<key>ButtonImage</key>
 	<string>facebookButton</string>
-	<key>ButtonImage@2x</key>
-	<string>facebookButton@2x</string>
 	<key>MenuPath</key>
 	<string>Share With Facebook</string>
 </dict>
