--- a/.github/workflows/xcodebuild.yml
+++ b/.github/workflows/xcodebuild.yml
@@ -6,7 +6,7 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [macos-12, macos-11]
+        os: [macos-12]
     name: Test on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 15
