Fix problem searching Helpbook
"Keyboard Shortcuts" item in "Help" menu did not work

- newer versions of macOS require help index to be in Spotlight format
- ensure coherent bundle identifier names between app and helpbook

Fix issue #1700

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -72,7 +72,7 @@
 	<key>CFBundleHelpBookFolder</key>
 	<string>Vienna.help</string>
 	<key>CFBundleHelpBookName</key>
-	<string>Vienna Help</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER).help</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
