--- a/Vienna Help/Info.plist
+++ b/Vienna Help/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en-us</string>
+	<string>en</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -24,8 +24,12 @@
 	<string>shared/images/Vienna-Logo.jpg</string>
 	<key>HPDBookIndexPath</key>
 	<string>Vienna.helpindex</string>
+	<key>HPDBookCSIndexPath</key>
+	<string>Vienna.cshelpindex</string>
 	<key>HPDBookTitle</key>
 	<string>Vienna Help</string>
+	<key>HPDBookKBProduct</key>
+	<string>Vienna</string>
 	<key>HPDBookType</key>
 	<string>3</string>
 </dict>
