--- a/Vienna/Resources/DemoFeeds.plist
+++ b/Vienna/Resources/DemoFeeds.plist
@@ -70,7 +70,7 @@
 	<key>Vienna Support</key>
 	<dict>
 		<key>URL</key>
-		<string>https://forums.cocoaforge.com/app.php/feed/forum/18</string>
+		<string>https://github.com/ViennaRSS/vienna-rss/discussions.atom</string>
 	</dict>
 </dict>
 </plist>
