Add OPML as a supported document type and declare its MIME types
Vienna can handle opening OPML files (see -[AppController application:openFile:]), so Vienna should be listed by LaunchServices, e.g. in "Open With" menus.

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -66,6 +66,18 @@
 			<key>LSHandlerRank</key>
 			<string>Default</string>
 		</dict>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>OPML document</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.opml.opml</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
@@ -211,6 +223,11 @@
 				<key>public.filename-extension</key>
 				<array>
 					<string>opml</string>
+				</array>
+				<key>public.mime-type</key>
+				<array>
+					<string>application/xml</string>
+					<string>text/xml</string>
 				</array>
 			</dict>
 		</dict>
