--- a/Vienna/Resources/eu.lproj/RSSSources.plist
+++ b/Vienna/Resources/eu.lproj/RSSSources.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>Blogspot</key>
@@ -14,7 +14,7 @@
 	<key>Fitxategi lokala</key>
 	<dict>
 		<key>LinkName</key>
-		<string>Sartu zure "home" direktorioa kokatzen den helbidea</string>
+		<string>Sartu zure &quot;home&quot; direktorioa kokatzen den helbidea</string>
 		<key>LinkTemplate</key>
 		<string>file://~/%@</string>
 	</dict>
@@ -27,30 +27,12 @@
 		<key>SiteHomePage</key>
 		<string>http://www.livejournal.com</string>
 	</dict>
-	<key>MSN Spaces</key>
-	<dict>
-		<key>LinkName</key>
-		<string>Sartu MSN Spaces -en erabiltzaile izena</string>
-		<key>LinkTemplate</key>
-		<string>http://spaces.msn.com/members/%@/feed.rss</string>
-		<key>SiteHomePage</key>
-		<string>http://spaces.msn.com</string>
-	</dict>
 	<key>URL</key>
 	<dict>
 		<key>LinkName</key>
 		<string>Sartu RSS jarioaren URL-a</string>
 		<key>LinkTemplate</key>
 		<string>%@</string>
-	</dict>
-	<key>Xanga</key>
-	<dict>
-		<key>LinkName</key>
-		<string>Sartu Xanga -ren erabiltzaile izena</string>
-		<key>LinkTemplate</key>
-		<string>http://www.xanga.com/rss.aspx?user=%@</string>
-		<key>SiteHomePage</key>
-		<string>http://www.xanga.com</string>
 	</dict>
 </dict>
 </plist>
