--- a/Vienna/Resources/it.lproj/RSSSources.plist
+++ b/Vienna/Resources/it.lproj/RSSSources.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>Local File</key>
@@ -8,15 +8,6 @@
 		<string>Enter the path under your home folder</string>
 		<key>LinkTemplate</key>
 		<string>file://~/%@</string>
-	</dict>
-	<key>Splinder</key>
-	<dict>
-		<key>SiteHomePage</key>
-		<string>http://www.splinder.com</string>
-		<key>LinkName</key>
-		<string>Enter Splinder User name</string>
-		<key>LinkTemplate</key>
-		<string>http://syndication.splinder.com/%@/rss2.xml</string>
 	</dict>
 	<key>LiveJournal</key>
 	<dict>
@@ -27,15 +18,6 @@
 		<key>LinkTemplate</key>
 		<string>http://www.livejournal.com/users/%@/data/rss</string>
 	</dict>
-	<key>MSN Spaces</key>
-	<dict>
-		<key>SiteHomePage</key>
-		<string>http://spaces.msn.com</string>
-		<key>LinkName</key>
-		<string>Enter MSN Spaces User name</string>
-		<key>LinkTemplate</key>
-		<string>http://spaces.msn.com/members/%@/feed.rss</string>
-	</dict>
 	<key>Blogspot</key>
 	<dict>
 		<key>SiteHomePage</key>
@@ -44,15 +26,6 @@
 		<string>Enter Blogspot User name</string>
 		<key>LinkTemplate</key>
 		<string>http://%@.blogspot.com/atom.xml</string>
-	</dict>
-	<key>Xanga</key>
-	<dict>
-		<key>SiteHomePage</key>
-		<string>http://www.xanga.com</string>
-		<key>LinkName</key>
-		<string>Enter Xanga User name</string>
-		<key>LinkTemplate</key>
-		<string>http://www.xanga.com/rss.aspx?user=%@</string>
 	</dict>
 	<key>URL</key>
 	<dict>
