--- a/Vienna/Resources/tr.lproj/RSSSources.plist
+++ b/Vienna/Resources/tr.lproj/RSSSources.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>Local File</key>
@@ -18,15 +18,6 @@
 		<key>LinkTemplate</key>
 		<string>http://www.livejournal.com/users/%@/data/rss</string>
 	</dict>
-	<key>MSN Spaces</key>
-	<dict>
-		<key>SiteHomePage</key>
-		<string>http://spaces.msn.com</string>
-		<key>LinkName</key>
-		<string>MSN Spaces Kullanıcı Adınızı Girin</string>
-		<key>LinkTemplate</key>
-		<string>http://spaces.msn.com/members/%@/feed.rss</string>
-	</dict>
 	<key>Blogspot</key>
 	<dict>
 		<key>SiteHomePage</key>
@@ -36,19 +27,10 @@
 		<key>LinkTemplate</key>
 		<string>http://%@.blogspot.com/atom.xml</string>
 	</dict>
-	<key>Xanga</key>
-	<dict>
-		<key>SiteHomePage</key>
-		<string>http://www.xanga.com</string>
-		<key>LinkName</key>
-		<string>Xanga Kullanıcı Adınızı Girin</string>
-		<key>LinkTemplate</key>
-		<string>http://www.xanga.com/rss.aspx?user=%@</string>
-	</dict>
 	<key>URL</key>
 	<dict>
 		<key>LinkName</key>
-		<string>RSS Beslemesinin URL'sini Girin</string>
+		<string>RSS Beslemesinin URL&apos;sini Girin</string>
 		<key>LinkTemplate</key>
 		<string>%@</string>
 	</dict>
