--- a/Vienna/Resources/zh-Hant.lproj/RSSSources.plist
+++ b/Vienna/Resources/zh-Hant.lproj/RSSSources.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>本機檔案</key>
@@ -33,15 +33,6 @@
 		<string>請輸入 RSS feed 的網址</string>
 		<key>LinkTemplate</key>
 		<string>%@</string>
-	</dict>
-	<key>Xanga</key>
-	<dict>
-		<key>LinkName</key>
-		<string>請輸入 Xanga 使用者名稱</string>
-		<key>LinkTemplate</key>
-		<string>http://www.xanga.com/rss.aspx?user=%@</string>
-		<key>SiteHomePage</key>
-		<string>http://www.xanga.com</string>
 	</dict>
 	<key>WordPress.com</key>
 	<dict>
@@ -78,15 +69,6 @@
 		<string>https://zi.media/rss/authors/%@</string>
 		<key>SiteHomePage</key>
 		<string>https://zi.media/</string>
-	</dict>
-	<key>隨意窩</key>
-	<dict>
-		<key>LinkName</key>
-		<string>請輸入隨意窩使用者名稱</string>
-		<key>LinkTemplate</key>
-		<string>https://blog.xuite.net/%@/blog/rss.xml</string>
-		<key>SiteHomePage</key>
-		<string>https://blog.xuite.net/</string>
 	</dict>
 	<key>HatenaBlog</key>
 	<dict>
