--- a/Vienna/SharedSupport/Plugins/ShareWithBuffer.viennaplugin/info.plist
+++ b/Vienna/SharedSupport/Plugins/ShareWithBuffer.viennaplugin/info.plist
@@ -9,7 +9,7 @@
 	<key>Type</key>
 	<string>Link</string>
 	<key>URL</key>
-	<string>http://bufferapp.com/add?url=$ArticleLink$&amp;text=$ArticleTitle$&amp;source=vienna</string>
+	<string>https://publish.buffer.com/compose?url=$ArticleLink$&amp;text=$ArticleTitle$&amp;source=vienna</string>
 	<key>FriendlyName</key>
 	<string>Buffer</string>
 	<key>Tooltip</key>
