--- a/Vienna/SharedSupport/Plugins/ShareWithX.viennaplugin/Info.plist
+++ b/Vienna/SharedSupport/Plugins/ShareWithX.viennaplugin/Info.plist
@@ -3,20 +3,20 @@
 <plist version="1.0">
 <dict>
 	<key>Name</key>
-	<string>ShareWithTwitter</string>
+	<string>ShareWithX</string>
 	<key>Type</key>
 	<string>Link</string>
 	<key>URL</key>
-	<string>https://twitter.com/intent/tweet?url=$ArticleLink$</string>
+	<string>https://x.com/intent/post?url=$ArticleLink$</string>
 	<key>Default</key>
 	<false/>
 	<key>FriendlyName</key>
-	<string>Twitter</string>
+	<string>X</string>
 	<key>Tooltip</key>
-	<string>Share the current article on twitter</string>
+	<string>Share the current article on X</string>
 	<key>ButtonImage</key>
-	<string>twitterButton</string>
+	<string>xTemplate</string>
 	<key>MenuPath</key>
-	<string>Share With Twitter</string>
+	<string>Share With X</string>
 </dict>
 </plist>
