Change search plug-in menu-item titles

--- a/Vienna/SharedSupport/Plugins/SearchWithDuckDuckGo.viennaplugin/Info.plist
+++ b/Vienna/SharedSupport/Plugins/SearchWithDuckDuckGo.viennaplugin/Info.plist
@@ -9,6 +9,6 @@
 	<key>SearchQueryString</key>
 	<string>https://duckduckgo.com/?q=$SearchTerm$</string>
 	<key>FriendlyName</key>
-	<string>DuckDuckGo</string>
+	<string>Search DuckDuckGo</string>
 </dict>
 </plist>
